Remove unused `--enable-native-access` parameter from migration command in README.md